fixed domain truncate

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
@@ -78,13 +78,18 @@
   .owner-label-container {
     max-width: 148px;
   }
-  .domain-link-text.render-domain-lebel-style {
-    color: @grey-700;
-    display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  .domain-link-container {
+    //consistent width for data-asset-header
     max-width: 148px;
+
+    .domain-link-text.render-domain-lebel-style {
+      color: @grey-700;
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 148px;
+    }
   }
   a.source-url-link {
     text-decoration: none;
